--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Infocom KBMFKG-UMI</title>
-        <link rel="icon" href="assets/img/bem.jpg" type="image/png">
+        <link rel="icon" href="assets/img/bem.png" type="image/png">
 
         <!--========== BOX ICONS ==========-->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
